@@ -67,6 +67,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -84,7 +85,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.mapping.AssociationHandler;
 import org.springframework.data.mapping.PersistentProperty;
 import org.springframework.data.mapping.PersistentPropertyAccessor;
-import org.springframework.data.util.ClassTypeInformation;
+import org.springframework.data.util.TypeInformation;
 import org.springframework.lang.NonNull;
 import org.springframework.lang.Nullable;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
@@ -144,21 +145,44 @@ public class DatastoreTemplate implements DatastoreOperations, ApplicationEventP
   @Override
   public <T> T save(T instance, Key... ancestors) {
     List<T> instances = Collections.singletonList(instance);
-    saveEntities(instances, ancestors);
+    insertOrSaveEntities(instances, ancestors, getDatastoreReadWriter()::put);
     return instance;
   }
 
   @Override
   public <T> Iterable<T> saveAll(Iterable<T> entities, Key... ancestors) {
+    insertOrSaveEntities(entities, ancestors, getDatastoreReadWriter()::put);
+    return entities;
+  }
+
+  @Override
+  public <T> T insert(final T instance, final Key... ancestors) {
+    List<T> instances = Collections.singletonList(instance);
+    insertOrSaveEntities(instances, ancestors, getDatastoreReadWriter()::add);
+    return instance;
+  }
+
+  @Override
+  public <T> Iterable<T> insertAll(final Iterable<T> entities, final Key... ancestors) {
+    insertOrSaveEntities(entities, ancestors, getDatastoreReadWriter()::add);
+    return entities;
+  }
+
+  private <T> void insertOrSaveEntities(Iterable<T> iterable, Key[] ancestors, Consumer<FullEntity<?>[]> consumer) {
     List<T> instances;
-    if (entities instanceof List) {
-      instances = (List<T>) entities;
+    if (iterable instanceof List) {
+      instances = (List<T>) iterable;
     } else {
       instances = new ArrayList<>();
-      entities.forEach(instances::add);
+      iterable.forEach(instances::add);
     }
-    saveEntities(instances, ancestors);
-    return entities;
+
+    if (!instances.isEmpty()) {
+      maybeEmitEvent(new BeforeSaveEvent(instances));
+      List<Entity> entities = getEntitiesForSave(instances, new HashSet<>(), ancestors);
+      SliceUtil.sliceAndExecute(entities.toArray(new Entity[0]), this.maxWriteSize, consumer);
+      maybeEmitEvent(new AfterSaveEvent(entities, instances));
+    }
   }
 
   private <T> List<Entity> getEntitiesForSave(
@@ -172,16 +196,6 @@ public class DatastoreTemplate implements DatastoreOperations, ApplicationEventP
       }
     }
     return entitiesForSave;
-  }
-
-  private <T> void saveEntities(List<T> instances, Key[] ancestors) {
-    if (!instances.isEmpty()) {
-      maybeEmitEvent(new BeforeSaveEvent(instances));
-      List<Entity> entities = getEntitiesForSave(instances, new HashSet<>(), ancestors);
-      SliceUtil.sliceAndExecute(
-          entities.toArray(new Entity[0]), this.maxWriteSize, getDatastoreReadWriter()::put);
-      maybeEmitEvent(new AfterSaveEvent(entities, instances));
-    }
   }
 
   @Override
@@ -249,7 +263,7 @@ public class DatastoreTemplate implements DatastoreOperations, ApplicationEventP
   }
 
   private <T> List<T> findAllById(Set<Key> keys, Class<T> entityClass, ReadContext context) {
-    List<Key> missingKeys = keys.stream().filter(context::notCached).collect(Collectors.toList());
+    List<Key> missingKeys = keys.stream().filter(context::notCached).toList();
 
     if (!missingKeys.isEmpty()) {
       List<Entity> entities = getDatastoreReadWriter().fetch(missingKeys.toArray(new Key[] {}));
@@ -305,8 +319,8 @@ public class DatastoreTemplate implements DatastoreOperations, ApplicationEventP
       return query;
     }
     Cursor cursor = null;
-    if (pageable instanceof DatastorePageable) {
-      cursor = ((DatastorePageable) pageable).toCursor();
+    if (pageable instanceof DatastorePageable datastorePageable) {
+      cursor = datastorePageable.toCursor();
     }
     StructuredQuery.Builder builder = query.toBuilder();
     if (cursor != null) {
@@ -470,7 +484,7 @@ public class DatastoreTemplate implements DatastoreOperations, ApplicationEventP
 
     Entity entity = getDatastoreReadWriter().get(key);
     return this.datastoreEntityConverter.readAsMap(
-        String.class, ClassTypeInformation.from(valueType), entity);
+        String.class, TypeInformation.of(valueType), entity);
   }
 
   @Override
@@ -561,7 +575,7 @@ public class DatastoreTemplate implements DatastoreOperations, ApplicationEventP
                 List<KeyValue> keyValues =
                     StreamSupport.stream((iterableVal).spliterator(), false)
                         .map(o -> KeyValue.of(this.getKey(o, false)))
-                        .collect(Collectors.toList());
+                        .toList();
                 value = ListValue.of(keyValues);
 
               } else {
@@ -656,7 +670,7 @@ public class DatastoreTemplate implements DatastoreOperations, ApplicationEventP
     return keys.stream()
         .map(key -> convertEntityResolveDescendantsAndReferences(entityClass, key, context))
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private <T> T convertEntityResolveDescendantsAndReferences(
